Make `email` and `password` required in `LoginRequest` (#16)
* Initial plan

* Make email and password required in LoginRequest interface


---------
