# src/swagger/swagger.json
@@ -115,6 +115,10 @@
 						"type": "string"
 					}
 				},
+				"required": [
+					"email",
+					"password"
+				],
 				"type": "object",
 				"additionalProperties": false
 			},
